# OPDI-SKPR

./: .gitignore  CMakeLists.txt  README.md  idf_component.yml  partitions.csv  sdkconfig.defaults
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/instructions/: documentation.instructions.md  wifi connection manager.instructions.md
.github/workflows/: build.yml  docs.yml  firmware.yml
components/bsp_extra/src/: bsp_board_extra.c
components/opdi_api/: CMakeLists.txt  opdi_api_static.c  opdi_api_ws.c
components/opdi_api/include/: opdi_api_ws.h
components/opdi_cam/: CMakeLists.txt  Kconfig  opdi_cam.c  opdi_cam_governor.c  opdi_cam_ir.c  opdi_cam_manager.c  opdi_cam_stream.c  opdi_cam_telemetry.c
components/opdi_cam/include/: opdi_cam.h
components/opdi_net/: CMakeLists.txt  Kconfig  opdi_net.c  opdi_net_hosted.c
components/opdi_net/include/: opdi_net.h
docs/: README.md  SRD.md  networking.md  web-ui.md
docs/api/: openapi.yaml
main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  main.cpp  routes_camera.c  routes_net.c
spiffs/web/: app.js  index.html  style.css
tests/: README.md  test_opdi_cam_config_roundtrip.c  test_opdi_cam_ext.c  test_opdi_cam_snapshot.c  test_opdi_net_mru.c  test_opdi_net_profiles.c  test_opdi_net_retry.c  test_opdi_net_status.c
tools/: apply_net_update.ps1  bootstrap_repo.ps1  bootstrap_repo.sh  build_flash_monitor.ps1  build_flash_monitor.sh  local_build.ps1  robot_config.json  validate_docs.ps1  validate_docs.sh
web/: app.js  index.html  style.css
